[package]
name = "cyfs-stack"
version = "0.5.2"
authors = ["liyaxing <liyaxing@buckyos.com>"]
edition = "2021"
license = "BSD-2-Clause"
description = "Rust cyfs-stack package"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
cyfs-bdt = { path = "../../component/cyfs-bdt" }
cyfs-bdt-ext = { path = "../../component/cyfs-bdt-ext" }
cyfs-base = { path = "../../component/cyfs-base" }
cyfs-core = { path = "../../component/cyfs-core" }
cyfs-group = { path = "../../component/cyfs-group" }
cyfs-debug = { path = "../../component/cyfs-debug" }
cyfs-lib = { path = "../../component/cyfs-lib" }
cyfs-chunk-lib = { path = "../../component/cyfs-chunk-lib" }
cyfs-noc = { path = "../../component/cyfs-noc" }
cyfs-ndc = { path = "../../component/cyfs-ndc" }
cyfs-tracker-cache = { path = "../../component/cyfs-tracker-cache" }
cyfs-task-manager = { path = "../../component/cyfs-task-manager" }
cyfs-chunk-cache = { path = "../../component/cyfs-chunk-cache" }
cyfs-util = { path = "../cyfs-util" }
cyfs-meta-lib = { path = "../cyfs-meta-lib" }
cyfs-perf-client = { path = "../cyfs-perf/cyfs-perf-client" }
#dsg-client = { path = "../dsg/dsg-client" }
cyfs-group = { path = "../../component/cyfs-group" }
log = "0.4"
serde = "1.0"
async-h1 = "2.3.3"
http-types = "2.12"
tide = "0.16"
serde_json = "1.0"
async-trait = "0.1.53"
hex = "0.4"
async-std = { version = "1.11", features = ["unstable", "attributes"] }
futures = "0.3"
int-enum = "0.4"
sha2 = "0.8"
once_cell = "1.12"
zip = "0.6"
byteorder = "1.3.4"
toml = { version = "0.5", features = ["preserve_order"] }
globset = "0.4.8"
lru_time_cache = "0.11"
percent-encoding = "2.1"
num_cpus = "1.13.1"
crossbeam = "0.8"
semver = "1.0"
prost = "0.11.2"

[target.'cfg(all(target_os="windows", target_env = "gnu"))'.dependencies]
sqlx = { version = "0.5.11", features = [
    "runtime-async-std-native-tls",
    "any",
    "sqlite",
    "mysql",
] }

[target.'cfg(any(not(target_os="windows"), not(target_env = "gnu")))'.dependencies]
sqlx = { version = "0.5.11", features = [
    "runtime-async-std-rustls",
    "any",
    "sqlite",
    "mysql",
] }

[dev-dependencies]
rand = "0.8.4"

[build-dependencies]
prost-build = "0.11.2"
protoc-bin-vendored = "3.0.0"
