
[package]
name = 'cyfs-util'
version = '0.6.7'
authors = ['weiqiushi <weiqiushi@buckyos.com>']
edition = '2021'
license = 'BSD-2-Clause'
description = 'Rust cyfs-util package'

[dependencies]
cyfs-base = { path = '../cyfs-base', version = '0.6' }
cyfs-sha2 = { path = '../../3rd/cyfs-sha2', version = '0.8.2' }
url = '2.2'
async-std = { version = '1.11', features = ['unstable', 'attributes'] }
zip = '0.6'
http-types = '2.12'
rusqlite = { version = '0.27.0', features = ['bundled', 'blob'] }
serde_json = '1.0'
serde = { version = '1.0', features = ['derive'] }
c_linked_list = '1.1.1'
clippy = { version = '0.0.302', optional = true }
libc = '0.2'
log = '0.4'
named-lock = '0.3'
fs2 = '0.4'
walkdir = '2.3'
lazy_static = '1.4'
clap = '2.34.0'
simple_logger = '2.1'
hex = '0.4'
async-h1 = '2.3.3'
async-trait = '0.1.53'
futures = '0.3'
int-enum = '0.4'
toml = '0.5'
once_cell = '1.12'
flexi_logger = '=0.19.5'
log-panics = { version = '2.0', features = ['with-backtrace'] }
sysinfo = '0.27'
dirs = '4.0'
thread_local = '1.1'

[target.'cfg(windows)'.dependencies]
winapi = { version = '0.3.6', features = [
	'psapi',
	'shellapi',
	'mswsock',
	'ws2ipdef',
] }

[target.'cfg(unix)'.dependencies]
nix = '0.24'

[target.'cfg(target_os = "macos")'.dependencies]
dirs = '4.0'

[build-dependencies]
cyfs-base = { path = '../cyfs-base', version = '0.6' }

[dev-dependencies]
rand = '0.8'
